--- a/Задание№1/index.html
+++ b/Задание№1/index.html
@@ -8,20 +8,19 @@
     <link href="style2.css" rel="stylesheet">
 </head>
 <body bgcolor="pink">
-    <!--<a href="./index2.html">-->
-    <h1 align="center"> <b> Я, <a href="file:///D:/frontend/index2.html" name="Милашевская Виолетта"> Милашевская Виолетта</a>, изучаю <font color="green"> HTML </font>, CSS и JS </b> </h1>
+        <h1 align="center"> <b> Я, <a href="file:./index2.html" name="Милашевская Виолетта"> Милашевская Виолетта</a>, изучаю <font color="green"> HTML </font>, CSS и JS </b> </h1>
         <h2 align="center"> Коротко обо мне </h2>
             <h3 align="center"> <font size="5" color="red"> Мое образование </font> </h3>
-    <p>
-        <font size="5" color="red" face="Arial"> <em>Окончила <span style="color:white">БНТУ </span> в 2015 году. Училась на факультете энергетического строительства по специальности инженер-строитель. </em> </font>
+    <p id="P2">
+        <em>Окончила <span style="color:white">БНТУ </span> в 2015 году. Училась на факультете энергетического строительства по специальности инженер-строитель. </em> </font>
     </p>
             <h3 align="center"> <font size="6" color="blue"> Моe первое место работы </font> </h3>
-    <p>
-        <font size="6" color="blue" face="Calibri"> <ins> После окончания университета работала в проектном институте <span style="color: darkgoldenrod">БЕЛНИИПРГРАДОСТРОИТЕЛЬСТВА</span> на должности инженер по теплогазоснабжению. Плюсами и, одновременно, минусаами работы считаю частные командировки. В данном месте проработала почти 4 года, т.е. до 2019 г. </ins> </font>
+    <p class="orginary">
+        <ins> После окончания университета работала в проектном институте <span style="color: darkgoldenrod">БЕЛНИИПРГРАДОСТРОИТЕЛЬСТВА</span> на должности инженер по теплогазоснабжению. Плюсами и, одновременно, минусаами работы считаю частные командировки. В данном месте проработала почти 4 года, т.е. до 2019 г. </ins> </font>
     </p>
             <h3 align="center"> <font size="8" color="purple"> Мое второе место работы </font> </h3>
-    <p>
-        <font size="8" color="purple" face="Calibri"> <kbd> С 2019 года и по сегодняшний день работаю помощником ГИПа (главного инженера проекта) в частной компании "<span style="background: rgb(207, 165, 202); font-size: 10;">Т</span>ворческая мастерская архитектора Ермольчика". Дружный коллектив и большая ответственность - главные плюсы этого места работы. </kbd> </font>
+    <p id="P1">
+        <kbd> С 2019 года и по сегодняшний день работаю помощником ГИПа (главного инженера проекта) в частной компании "<span style="background: rgb(207, 165, 202); font-size: 10;">Т</span>ворческая мастерская архитектора Ермольчика". Дружный коллектив и большая ответственность - главные плюсы этого места работы. </kbd> </font>
     </p>
         <h2> <font size="6" color="brown"> Список любимых фильмов: </font> </h2>
         <ol> 
@@ -37,19 +36,21 @@
             <font size="6" color="brown">     
                     <li> Русские мультфильмы </li>
             </font>        
-                    <ol type="i"> <font size="5" color="gray">
-                        <li> Трое из Простоквашино </li>
-                        <li> Винни Пух </li>
-                        <li> Чебурашка </li>
+                    <ul> <font size="5" color="gray">
+                        <span class="par">&sect; Трое из Простоквашино</span>
+                        <br>
+                        <span class="par">&sect; Винни пух</span>
+                        <br>
+                        <span class="par">&sect; Чебурашка</span>
                         </font>
-                    </ol>
+                    </ul>
             <font size="6" color="brown">    
                     <li> Русская литература </li>
             </font>
                     <ol type="I"> <font size="5" color="gray">
-                        <li> Трое из Простоквашино </li>
-                        <li> Винни Пух </li>
-                        <li> Чебурашка </li>
+                        <li> Анна Каренина </li>
+                        <li> 12 стульев </li>
+                        <li> Обломовв </li>
                         </font>
                     </ol>
         </ol>
