--- a/Задание№1/index2.html
+++ b/Задание№1/index2.html
@@ -8,7 +8,7 @@
 <body bgcolor="beige">
     <h1 align="center"> <em> Милашевская Виолетта </em> </h1>
         <h2 align="left"> "Коротко обо мне" (нажми на картинку) </h2>
-            <a href="file:///D:/frontend/index.html"> <img src="Nika.jpg" widh="100" height="200"> </a> 
+            <a href="file:./index.html"> <img src="Nika.jpg" widh="100" height="200"> </a> 
     <div>
         <pre>
             <h3 align="right"> Стих №1 </h3>
@@ -60,5 +60,6 @@
                 За окно с огнем!
         </pre>
     </div>
+    <span class="copy">&copy; Милашевская В.А. </span>
    </body>
 </html>
