--- a/Задание№3/footbal_start/footbal_start/footbal/index.html
+++ b/Задание№3/footbal_start/footbal_start/footbal/index.html
@@ -103,6 +103,9 @@
             </div>
             <div class="text2">
                 <h2><p class="right_text2">BE ACTIVE</p></h2>
+                <p class="black_text2"> Post videos with your skills,
+                    <br>Like and follow others to be 
+                    <br>more popular.</p>
             </div> 
             <div class="right"> 
                 <img class="contact" src="./images/contact.png" alt="images">
@@ -113,7 +116,9 @@
                 </a>
             </div>
             <div class="text3">
-                <h2><p class="right_text3">BE CONTACT</p></h2>
+                <h2><p class="right_text3">FIND CONTACT</p></h2>
+                <p class="black_text3"> Contact others to find right coach 
+                    <br>or athlete you are looking for. </p>
             </div> 
             <div class="left2"> 
                 <img class="work" src="./images/work.png" alt="images">
@@ -124,7 +129,10 @@
                 </a>
             </div>
             <div class="text4">
-                <h2><p class="right_text2">WORK IT</p></h2>
+                <h2><p class="right_text4">WORK IT</p></h2>
+                <p class="black_text4"> Enjoy being a student athlete, the recruiting 
+                    <br>process can be overwhelming, we want to 
+                    <br>make this a enjoyable experience.  </p>
             </div> 
 
         </article>
