--- a/Задание№3/footbal_start/footbal_start/footbal/index.html
+++ b/Задание№3/footbal_start/footbal_start/footbal/index.html
@@ -139,9 +139,12 @@
         <footer>
             <div class="end"> 
                 <img class="ex" src="./images/ex.png" alt="ex">
-                <h2>DOWLOAD APP<br>
+                <h2><div class="pp">DOWLOAD APP</div><br>
+                        <img class="pin" src="./images/up.png" alt="images">
                     <span>SHOW EWERYONE WHAT YOU CAN DO!</span></h2>
-                <div class="buttons">
+                        <img class="line_short" src="./images/line_short.png">
+                        <img class="line_long" src="./images/line_long.png">
+                        <div class="buttons">
                     <a href="#">
                         <i class="fab fa-apple"></i>
                         Dowload on the
@@ -153,7 +156,21 @@
                         <span>Google play</span>
                     </a>
                 </div>
+                    
+                <div class="dark">
+                    <div class="list">
+                        <ul class="lilist">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                        <img class="logo2" src="./images/logo2.png" alt="images">
+                        <h3> Contact Us | Terms & Conditions</h3>
+                </div>
+                </div>
             </div>
+            
         </footer>
     </div>
    </body>
