--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="buttons">
                     <a href="#">
                         <i class="fab fa-apple"></i>
-                        Dowload on the
+                        Download on the
                         <span>App Store</span>
                     </a>
                     <a href="#">
@@ -134,18 +134,17 @@
                     <br>process can be overwhelming, we want to 
                     <br>make this a enjoyable experience.  </p>
             </div> 
-
-        </article>
-        <footer>
             <div class="end"> 
                 <img class="ex" src="./images/ex.png" alt="ex">
-                <h2>DOWLOAD APP<br>
-                    <img class="pin" src="./images/up.png" alt="images">
+                <h2><div class="pp">DOWNLOAD APP</div><br>
+                        <img class="pin" src="./images/up.png" alt="images">
                     <span>SHOW EWERYONE WHAT YOU CAN DO!</span></h2>
-                <div class="buttons">
+                        <img class="line_short" src="./images/line_short.png">
+                        <img class="line_long" src="./images/line_long.png">
+                        <div class="buttons">
                     <a href="#">
                         <i class="fab fa-apple"></i>
-                        Dowload on the
+                        Download on the
                         <span>App Store</span>
                     </a>
                     <a href="#">
@@ -154,13 +153,20 @@
                         <span>Google play</span>
                     </a>
                 </div>
-            </div>
-            <div class="list">
-                <ul class="lilist">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                </ul>
+        </article>
+        <footer>            
+                <div class="dark">
+                    <div class="list">
+                        <ul class="lilist">
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        </ul>
+                    </div>
+                        <img class="logo2" src="./images/logo2.png" alt="images">
+                        <h3> Contact Us | Terms & Conditions</h3>
+                </div>
+                </div>
             </div>
         </footer>
     </div>
